# recsys-from-scratch

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bug_logs.md  docker-compose.yml  random_stuff.md  todo.md
include/: bloom_filter.h  config.h  data_loader.h  kdtree.h  pipeline.h  ranker.h
scripts/: 00_category_selection.py  01_download_data.py  02_check_data.py  03_filter_data.py  04_item_embedding.py  04b_apply_pca.py  05_evaluate.py  README.md  config.py  main.py  pyproject.toml  run_scripts.bash
src/: main.cpp  pipeline.cpp
src/embeddings/: user_embedding.cpp
src/ranking/: ranker.cpp
src/retrieval/: bloom_filter.cpp  kdtree.cpp
src/utils/: data_loader.cpp
tests/: test.cpp
